# footy-v5

./: .env.example  .gitignore  .npmrc  LICENSE  Makefile  README.md  VALIDATION_REPORT.md  docker-compose.yml  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  ruff.toml  setup.py  setup_windows.py  start_services.bat  start_services.py  system-prompt  temp_memory.md  turbo.json
.github/workflows/: ci.yml  minimal-ci.yml
apps/api-server/: Dockerfile  __init__.py  deps.py  main.py  plugin_loader.py  simple_main.py  tasks.py
apps/api-server/db/: init.py  models.py
apps/api-server/realtime/: websocket.py
apps/api-server/routers/: __init__.py  cronjobs.py  fixtures.py  live.py  plugins.py  prematch.py  settings.py
apps/api-server/utils/: date_now.py
apps/frame-worker/: Dockerfile  main.py
apps/live-worker/: Dockerfile  __init__.py  main.py
apps/web-dashboard/: .eslintrc.json  .prettierrc  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web-dashboard/__tests__/: dashboard.test.tsx
apps/web-dashboard/app/: globals.css  layout.tsx  providers.tsx
apps/web-dashboard/app/analytics/: page.tsx
apps/web-dashboard/app/api/health/: route.ts
apps/web-dashboard/app/dashboard/: page.tsx
apps/web-dashboard/app/fixtures/: page.tsx
apps/web-dashboard/app/fixtures/[id]/: page.tsx
apps/web-dashboard/app/live/: page.tsx
apps/web-dashboard/app/live/[fixtureId]/: page.tsx
apps/web-dashboard/app/plugins/: page.tsx
apps/web-dashboard/components/analytics/: analytics-charts.tsx  analytics-filters.tsx  analytics-header.tsx  analytics-overview.tsx
apps/web-dashboard/components/dashboard/: dashboard-stats.tsx  live-matches.tsx  odds-movement.tsx  recent-activity.tsx  system-health.tsx
apps/web-dashboard/components/fixtures/: fixture-detail-tabs.tsx  fixture-events.tsx  fixture-h2h.tsx  fixture-lineups.tsx  fixture-player-stats.tsx  fixture-statistics.tsx  fixtures-filters.tsx  fixtures-header.tsx  fixtures-list.tsx
apps/web-dashboard/components/layout/: header.tsx  navigation.tsx
apps/web-dashboard/components/live/: live-data-header.tsx  live-events-timeline.tsx  live-match-header.tsx  live-matches-grid.tsx  live-odds-table.tsx  live-stats-chart.tsx
apps/web-dashboard/components/plugins/: plugins-header.tsx  plugins-list.tsx  plugins-stats.tsx
apps/web-dashboard/components/ui/: date-range-picker.tsx  live-clock.tsx
config/: app.yml  leagues.yml  workers.yml
database/ddl/: 00_dim_tables.sql  10_fact_tables.sql  20_continuous_aggs.sql  99_retention_policies.sql
database/seeds/: bootstrap_static.sql
infra/k8s/: api-server.yaml  configmap.yaml  namespace.yaml  postgres.yaml
tests/: __init__.py
tests/api_server/: __init__.py  test_fixtures_router.py
tests/tools/: test_fixtures_service.py
tests/workers/: __init__.py  test_live_worker.py
tools/: __init__.py  api_config.py  base_service.py  countries_service.py  error_handler.py  fixture_events_service.py  fixture_h2h_service.py  fixture_lineups_service.py  fixture_player_statistics_service.py  fixture_statistics_service.py  fixtures_round_service.py  fixtures_rounds_service.py  fixtures_service.py  injuries_service.py  leagues_service.py  leagues_txt_service.py  live_events_service.py  live_odds_service.py  live_stats_service.py  odds_live_bets_service.py  odds_live_service.py  player_profiles_service.py  player_squads_service.py  player_statistics_service.py  prematch_bets_service.py  prematch_bookmakers_service.py  prematch_mapping_service.py  prematch_odds_service.py  seasons_service.py  standings_service.py  team_countries_service.py  team_statistics_service.py  teams_service.py  teamsinfo_service.py  template_wrapper.py  timezone_service.py
